# Y

./: .gitignore
backend/: Cargo.toml  Dockerfile  docker-compose.yml
backend/migrations/: migration1.sql
backend/src/: db.rs  main.rs  redis.rs  secrets.rs
backend/src/controllers/: auth.rs  mod.rs
backend/src/models/: auth.rs
backend/src/routers/: auth.rs  mod.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/api/: route.ts  use-api.ts
frontend/app/: globals.css  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/components/: providers.tsx
