[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",     
    "macros",        
    "uuid",          
    "chrono",        
    "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
oauth-axum = "0.1.4"
redis = { version = "0.32.5", features = ["tokio-comp"] }
jsonwebtoken = "9.3.1"